<resources>
    <string name="app_name">PersonalTasks</string>
    <string name="action_sign_in">Sign in</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="login_register">Register</string>
    <string name="action_register">Register</string>
    <string name="action_save_login">Save</string>
    <string name="string_money">Money: </string>
    <string name="prompt_name">Name</string>
    <string name="button_string_put">PUT</string>
    <string name="button_string_remove">REMOVE</string>
    <string name="hint_date">Date</string>
    <string name="hint_description">Description</string>
    <string name="hint_price">Price</string>
    <string name="action_confirm">Confirm</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_offline_version">Offline Version</string>
    <string name="action_button_transaction_confirm">Transaction added successfully!</string>
    <string name="error_valid_value">Enter with a valid value.</string>
    <string name="imate_back">Back</string>
    <string name="edit_text_search">SEARCH</string>
    <string name="voice_cancel">Voice Cancel</string>
    <string name="action_search">Search</string>
    <string name="hint_inicial_value">Inicial Value</string>
    <string name="info_money">Expenses</string>
    <string name="prompt_spinner">Category</string>
    <string-array name="cat_names">
        <item>George</item>
        <item>Zubin</item>
        <item>Carlos</item>
        <item>Frank</item>
        <item>Charles</item>
        <item>Simon</item>
        <item>Fezra</item>
        <item>Henry</item>
        <item>Schuster</item>
    </string-array>
    <string-array name="tabs">
        <item>Wallet</item>
        <item>Debts</item>
        <item>Personal</item>
    </string-array>
    <string-array name="query_suggestions">
        <item>Android</item>
        <item>iOS</item>
        <item>SCALA</item>
        <item>Ruby</item>
        <item>JavaScript</item>
    </string-array>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="menu_transaction_consult">Consult transactions</string>
    <string name="info_empty_transactions">There no transactions on this date</string>
    <string name="error_password">Incorrect username or password.</string>
    <string name="log_info_att_wallet">Updating wallet value...</string>
    <string name="info_confirm_logout">Are you sure to quit?</string>
    <string name="lbl_confirm">Confirm</string>
    <string name="lbl_yes">Yes</string>
    <string name="lbl_no">No</string>
    <string name="info_connection">No Connection</string>
    <string name="action_save_user">User save successful!</string>
    <string name="hint_recurrence">Number of months</string>
    <string name="action_select_action">Select an action</string>
    <string name="action_delete_transaction">Delete</string>
    <string name="action_transaction_deleted">Transaction deleted successful.</string>
</resources>
