<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <FrameLayout
        android:id="@+id/frameAnimation"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dialog_background"
        />

    <LinearLayout
        android:id="@+id/linearAnimation"
        android:layout_width="300dp"
        android:layout_height="306dp"
        android:layout_gravity="center"
        android:background="@android:color/white"
        android:elevation="24dp"
        android:orientation="vertical"
        android:paddingLeft="36dp"
        android:paddingRight="24dp"
        android:paddingTop="36dp"
        >

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:orientation="vertical"
            android:paddingRight="8dp">

            <TextView
                android:id="@+id/textViewTitleChangeWallet"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:fontFamily="sans-serif-medium"
                android:text="Wallet Manager"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextNameWallet"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/hint_description"
                android:paddingBottom="16dp"
                android:paddingTop="8dp"
                android:maxLines="1"
                android:singleLine="true"
                />

            <EditText
                android:id="@+id/editTextPriceWallet"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/hint_price"
                android:inputType="number"
                android:maxLines="1"
                android:singleLine="true"
                android:paddingBottom="16dp"
                android:paddingTop="8dp" />

            <Spinner
                android:id="@+id/spinnerIcons"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="-16dp"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:gravity="right"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonCancelChange"
                style="@style/ButtonWithoutBackground"
                android:text="@string/action_cancel" />

            <Button
                android:id="@+id/buttonConfirmChange"
                style="@style/ButtonWithoutBackground"
                android:text="@string/action_confirm" />
        </LinearLayout>


    </LinearLayout>
</FrameLayout>