<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/frameBackgroundDialog"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dialog_background" />

    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:background="@android:color/white"
        android:elevation="24dp"
        android:orientation="vertical">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="8dp"
            android:paddingTop="16dp">

            <TextView
                android:id="@+id/textViewTitleChangeWallet"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/hint_inicial_value"
                android:textColor="@color/colorAccent"
                android:layout_marginBottom="16dp"
                android:textSize="24sp"
                />
        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="8dp"
            android:paddingTop="16dp">
            <EditText
                android:id="@+id/editTextStartValue"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/hint_inicial_value"
                android:paddingBottom="16dp"
                android:paddingTop="8dp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="25dp"
            android:gravity="right"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonCancelDialogStart"
                style="@style/ButtonWithoutBackground"
                android:text="@string/action_cancel" />


            <Button
                android:id="@+id/buttonConfirmDialogStart"
                style="@style/ButtonWithoutBackground"
                android:layout_height="36dp"
                android:text="@string/action_confirm" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>