<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="36dp"
            android:paddingRight="24dp"
            android:paddingTop="36dp"
            tools:context=".controller. .activities.MainLoginActivity">


            <LinearLayout
                android:id="@+id/linear_login_sign_form"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:orientation="vertical"
                android:paddingRight="8dp">


                <TextView
                    android:id="@+id/textViewTitleChangeWallet"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/login_register"
                    android:textColor="@color/colorAccent"
                    android:textSize="20sp"
                    android:textStyle="bold" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/textinput_size"
                    android:gravity="bottom"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageViewName"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:padding="6dp"
                        android:src="@drawable/ic_social_person"

                        />


                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/textInputName"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/textinput_size"
                        android:layout_toRightOf="@+id/imageViewName"
                        android:paddingLeft="@dimen/padding_edittext_bottom"
                        android:paddingRight="@dimen/padding_edittext_bottom"
                        android:paddingTop="@dimen/padding_input_top">

                        <EditText
                            android:id="@+id/editTextName"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/edittext_size"
                            android:hint="@string/prompt_name"
                            android:imeActionId="@+id/userName"
                            android:imeActionLabel="@string/action_sign_in"
                            android:imeOptions="actionUnspecified"
                            android:maxLines="1"
                            android:paddingBottom="@dimen/padding_edittext_bottom"
                            android:paddingTop="@dimen/padding_edittext_top"
                            android:singleLine="true"
                            android:textSize="@dimen/textfield_textsize" />
                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/textinput_size"
                    android:gravity="bottom"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageViewUserName"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:src="@drawable/ic_action_username"

                        />

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/textInputUsername"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/textinput_size"
                        android:layout_below="@+id/textInputName"
                        android:paddingLeft="@dimen/padding_edittext_bottom"
                        android:paddingRight="@dimen/padding_edittext_bottom"
                        android:paddingTop="@dimen/padding_input_top">

                        <EditText
                            android:id="@+id/editTextUsername"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/edittext_size"
                            android:hint="@string/prompt_username"
                            android:maxLines="1"
                            android:paddingBottom="@dimen/padding_edittext_bottom"
                            android:paddingTop="@dimen/padding_edittext_top"
                            android:singleLine="true"
                            android:textSize="@dimen/textfield_textsize" />

                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/textinput_size"
                    android:gravity="bottom"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageViewPassword"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:src="@drawable/ic_action_password"

                        />

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/textinput_size"
                        android:layout_below="@id/textInputUsername"
                        android:paddingLeft="@dimen/padding_edittext_bottom"
                        android:paddingRight="@dimen/padding_edittext_bottom"
                        android:paddingTop="@dimen/padding_input_top">

                        <EditText
                            android:id="@+id/editTextPassword"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/edittext_size"
                            android:hint="@string/prompt_password"
                            android:imeActionId="@+id/userName"
                            android:imeActionLabel="@string/action_sign_in"
                            android:imeOptions="actionUnspecified"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:paddingBottom="@dimen/padding_edittext_bottom"
                            android:paddingTop="@dimen/padding_edittext_top"
                            android:singleLine="true"
                            android:textSize="@dimen/textfield_textsize" />

                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:gravity="right"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonCancelFormLogin"
                    style="@style/ButtonWithoutBackground"
                    android:text="@string/action_cancel" />

                <Button
                    android:id="@+id/buttonConfirmFormLogin"
                    style="@style/ButtonWithoutBackground"
                    android:text="@string/action_confirm" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>