<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    >

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="@drawable/logo"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".controller. .activities.MainLoginActivity"
        >



        <!-- Login progress -->
        <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipChildren="false"
            >

            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:orientation="vertical"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/textinput_size"
                    android:gravity="bottom"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageViewUserNameMain"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:src="@drawable/ic_action_username"

                        />

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/textinput_size"
                        android:paddingTop="@dimen/padding_input_top">

                        <EditText
                            android:id="@+id/editTextUsername"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/edittext_size"
                            android:hint="@string/prompt_username"
                            android:maxLines="1"
                            android:paddingBottom="@dimen/padding_edittext_bottom"
                            android:paddingTop="@dimen/padding_edittext_top"
                            android:singleLine="true"
                            android:textSize="@dimen/textfield_textsize" />

                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/textinput_size"
                    android:gravity="bottom"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageViewPassword"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:src="@drawable/ic_action_password"

                        />

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/textinput_size"
                        android:paddingTop="@dimen/padding_input_top">

                        <EditText
                            android:id="@+id/editTextPassword"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/edittext_size"
                            android:hint="@string/prompt_password"
                            android:imeActionId="@+id/login"
                            android:imeActionLabel="@string/action_sign_in"
                            android:imeOptions="actionUnspecified"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:paddingBottom="@dimen/padding_edittext_bottom"
                            android:paddingTop="@dimen/padding_edittext_top"
                            android:singleLine="true"
                            android:textSize="@dimen/textfield_textsize" />

                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>


                <Button
                    android:id="@+id/buttonSignLogin"
                    style="@style/ButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_size"
                    android:layout_marginTop="@dimen/vertical_padding_button"
                    android:text="@string/action_sign_in"
                    android:elevation="2dp"
                    />

                <Button
                    android:id="@+id/buttonSignOffline"
                    style="@style/ButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_size"
                    android:layout_marginTop="@dimen/vertical_padding_button"
                    android:text="@string/action_offline_version"
                    android:elevation="2dp"
                    />
            </LinearLayout>
        </ScrollView>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabAddLogin"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:elevation="6dp"
            android:src="@drawable/ic_content_add" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:elevation="4dp"
            >

        </FrameLayout>

    </RelativeLayout>


</LinearLayout>