<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar" />

    <!--<ImageView-->
    <!--android:id="@+id/imageViewLogo"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="100dp"-->
    <!--android:layout_below="@id/app_bar"-->
    <!--android:src="@drawable/logo" />-->

    <FrameLayout
        android:layout_below="@id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/teste"
        />

    <FrameLayout
        android:layout_below="@id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:alpha="0.5"
        />



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/app_bar"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"

        tools:context=".controller. .activities.MainLoginActivity">


        <!-- User progress -->
        <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipChildren="false"
            >

            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:orientation="vertical"
                android:layout_gravity="center_vertical"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/textinput_size"
                    android:gravity="bottom"
                    android:orientation="horizontal"
                    >

                    <ImageView
                        android:id="@+id/imageViewUserNameMain"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:src="@drawable/ic_action_username"

                        />

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/textinput_size"
                        android:paddingLeft="@dimen/padding_edittext_bottom"
                        android:paddingRight="@dimen/padding_edittext_bottom"
                        android:paddingTop="@dimen/padding_input_top"
                        >

                        <EditText
                            android:id="@+id/editTextUsername"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/edittext_size"
                            android:hint="@string/prompt_username"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:textSize="@dimen/textfield_textsize"
                            android:gravity="center_vertical"
                            />

                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/textinput_size"
                    android:gravity="bottom"
                    android:orientation="horizontal"
                    >

                    <ImageView
                        android:id="@+id/imageViewPassword"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:src="@drawable/ic_action_password"

                        />

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/textinput_size"
                        android:paddingLeft="@dimen/padding_edittext_bottom"
                        android:paddingRight="@dimen/padding_edittext_bottom"
                        android:paddingTop="@dimen/padding_input_top">

                        <EditText
                            android:id="@+id/editTextPassword"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/edittext_size"
                            android:hint="@string/prompt_password"
                            android:imeActionId="@+id/userName"
                            android:imeActionLabel="@string/action_sign_in"
                            android:imeOptions="actionUnspecified"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:paddingTop="@dimen/padding_edittext_top"
                            android:singleLine="true"
                            android:textSize="@dimen/textfield_textsize"
                            android:gravity="center_vertical"
                            />

                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>


                <Button
                    android:id="@+id/buttonSignLogin"
                    style="@style/ButtonStyle"
                    android:layout_width="280dp"
                    android:layout_height="@dimen/button_size"
                    android:layout_marginTop="@dimen/vertical_padding_button"
                    android:elevation="2dp"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/action_sign_in" />

                <Button
                    android:id="@+id/buttonSignOffline"
                    style="@style/ButtonStyle"
                    android:layout_width="280dp"
                    android:layout_height="@dimen/button_size"
                    android:layout_marginTop="@dimen/vertical_padding_button"
                    android:elevation="2dp"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/action_offline_version" />
            </LinearLayout>
        </ScrollView>

        <com.melnykov.fab.FloatingActionButton
            android:id="@+id/fabAddLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:src="@drawable/ic_add_white_24dp"
            fab:fab_colorNormal="@color/colorAccent"
            fab:fab_colorPressed="@color/accent_pressed"
            fab:fab_colorRipple="@color/ripple" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:elevation="4dp">

        </FrameLayout>

    </RelativeLayout>

    <FrameLayout
        android:id="@+id/frameDialogLoginTransaction"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <View
        android:id="@+id/toolbar_shadow"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_below="@+id/app_bar"
        android:background="@drawable/toolbar_shadow" />

</RelativeLayout>